// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF eocFKO"
      color="#fff"
      type="primary"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        50
        %
      </div>
      <div
        className="sc-kYrkKh hUZNpb"
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "200%",
            }
          }
        >
          50
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF eocFKO"
      color="#fff"
      type="secondary"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        45
        %
      </div>
      <div
        className="sc-kYrkKh eFXczi"
        style={
          Object {
            "width": "45%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "222.22222222222223%",
            }
          }
        >
          45
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF eocFKO"
      color="#fff"
      type="tertiary"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        40
        %
      </div>
      <div
        className="sc-kYrkKh VIlLi"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "250%",
            }
          }
        >
          40
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF eocFKO"
      color="#fff"
      type="danger"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        35
        %
      </div>
      <div
        className="sc-kYrkKh dXAPzh"
        style={
          Object {
            "width": "35%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "285.7142857142857%",
            }
          }
        >
          35
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF eocFKO"
      color="#fff"
      type="warning"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        30
        %
      </div>
      <div
        className="sc-kYrkKh bBxwaU"
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "333.3333333333333%",
            }
          }
        >
          30
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF eocFKO"
      color="#fff"
      type="success"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        25
        %
      </div>
      <div
        className="sc-kYrkKh IpAmU"
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "400%",
            }
          }
        >
          25
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF eocFKO"
      color="#fff"
      type="info"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        20
        %
      </div>
      <div
        className="sc-kYrkKh fnhqWe"
        style={
          Object {
            "width": "20%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "500%",
            }
          }
        >
          20
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA kenyBU sc-bQdQlF jmWopY"
      color="red"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        15
        %
      </div>
      <div
        className="sc-kYrkKh vOFWN"
        style={
          Object {
            "width": "15%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "666.6666666666666%",
            }
          }
        >
          15
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF eocFKO"
      color="#fff"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        50
        %
      </div>
      <div
        className="sc-kYrkKh hUZNpb"
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "200%",
            }
          }
        >
          50
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF eocFKO"
      color="#fff"
      type="secondary"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        45
        %
      </div>
      <div
        className="sc-kYrkKh eFXczi"
        style={
          Object {
            "width": "45%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "222.22222222222223%",
            }
          }
        >
          45
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF eocFKO"
      color="#fff"
      type="tertiary"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        40
        %
      </div>
      <div
        className="sc-kYrkKh VIlLi"
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "250%",
            }
          }
        >
          40
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF eocFKO"
      color="#fff"
      type="danger"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        35
        %
      </div>
      <div
        className="sc-kYrkKh dXAPzh"
        style={
          Object {
            "width": "35%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "285.7142857142857%",
            }
          }
        >
          35
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF eocFKO"
      color="#fff"
      type="warning"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        30
        %
      </div>
      <div
        className="sc-kYrkKh bBxwaU"
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "333.3333333333333%",
            }
          }
        >
          30
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF eocFKO"
      color="#fff"
      type="success"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        25
        %
      </div>
      <div
        className="sc-kYrkKh IpAmU"
        style={
          Object {
            "width": "25%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "400%",
            }
          }
        >
          25
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF eocFKO"
      color="#fff"
      type="info"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        20
        %
      </div>
      <div
        className="sc-kYrkKh fnhqWe"
        style={
          Object {
            "width": "20%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "500%",
            }
          }
        >
          20
          %
        </div>
      </div>
    </div>
    <div
      className="sc-jGVbCA fNiEtx sc-bQdQlF jmWopY"
      color="red"
    >
      <div
        className="sc-xyEjG iUqnsJ"
      >
        15
        %
      </div>
      <div
        className="sc-kYrkKh vOFWN"
        style={
          Object {
            "width": "15%",
          }
        }
      >
        <div
          className="sc-dWdcrH jUYHsK"
          style={
            Object {
              "width": "666.6666666666666%",
            }
          }
        >
          15
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
